# powerpack

./: Cargo.toml  README.md  RELEASES.md
.github/workflows/: build.yaml
crates/cache/: Cargo.toml
crates/cache/src/: lib.rs  query.rs
crates/cli/: Cargo.toml
crates/cli/src/: alfred.rs  cargo.rs  main.rs
crates/detach/: Cargo.toml
crates/detach/src/: lib.rs
crates/env/: Cargo.toml
crates/env/src/: lib.rs
crates/logger/: Cargo.toml
crates/logger/src/: lib.rs
src/: lib.rs
