[workspace]
members = ["crates/*", "examples/*"]

[workspace.package]
version = "0.6.0"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2021"
repository = "https://github.com/rossmacarthur/powerpack"
license = "MIT OR Apache-2.0"
keywords = ["alfred", "workflow"]
categories = ["command-line-utilities"]

[workspace.dependencies]
powerpack = { version = "0.6.0", path = "." }
powerpack-detach = { version = "0.6.0", path = "crates/detach" }
powerpack-env = { version = "0.6.0", path = "crates/env" }
powerpack-logger = { version = "0.6.0", path = "crates/logger" }
home = "0.5.3"
jiff = "0.2.0"
libc = "0.2.151"
log = { version = "0.4.17", features = ["std"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "2.0.11"

###############################################################################

[package]
name = "powerpack"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "⚡ Supercharge your Alfred workflows by building them in Rust!"
readme = "README.md"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
powerpack-env = { workspace = true, optional = true }
powerpack-detach = { workspace = true, optional = true }
powerpack-logger = { workspace = true, optional = true }

[dev-dependencies]
goldie = "0.4.3"

[features]
default = ["env"]
detach = ["dep:powerpack-detach"]
env = ["dep:powerpack-env"]
logger = ["dep:powerpack-logger"]

[profile.release]
strip = true
