[package]
name = "powerpack-env"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "⚡ Useful environment variables in Alfred workflows"
readme = "README.md"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
home = "0.5.9"
