[package]
name = "powerpack-logger"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "⚡ A simple logger for Alfred workflows"
readme = "README.md"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
home.workspace = true
jiff.workspace = true
log.workspace = true
thiserror.workspace = true
powerpack-env.workspace = true
